--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-#intro{
+#header{
     background-image: url("/images/logo.svg");
     background-size: contain;
     background-repeat: no-repeat;
+    text-align: center;
 }
 header {
     background-color: #f2f2f2;
@@ -13,9 +14,15 @@ header {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    
   }
   
+  #nav{
+    margin-left: 500px;
+  }
+  #socials{
+    margin-left: 700px;
+  }
   nav ul li {
     display: inline-block;
   }
@@ -33,5 +40,20 @@ header {
     color: #5f5f5f;
   }
 #intro{
-    text-align: center;
-} 
+  text-align: center;
+  justify-content: center;
+}
+#profilepic{
+  border-radius: 50%;
+  margin-top: -25px;
+
+}
+
+#skills{
+  text-align: center;
+}
+#techstack div{
+  display: inline-block;
+ 
+  border: 2px round black;
+}
