--- a/style.css
+++ b/style.css
@@ -54,6 +54,13 @@ header {
 }
 #techstack div{
   display: inline-block;
- 
-  border: 2px round black;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    background-color: grey;
+    background-size: 50% auto;
+    margin-right: 25px;
+    margin-bottom: 25px;
+    padding-top: 15px;
+    border: 2px black round;
 }
