--- a/style.css
+++ b/style.css
@@ -1,64 +1,132 @@
-#header{
-    background-image: url("/images/logo.svg");
-    background-size: contain;
+body{
+  margin: 0px;
+}
+
+/*header */
+header{
+    height: 55vh;
+    background-image: url("images/logo.svg");
+    background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
     text-align: center;
 }
-header {
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  
-  nav ul {
+
+/*navigation*/
+  #nav nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    float: center;
     
   }
-  
-  
-  #socials{
-    float: center;
-  }
-  nav ul li {
+  #nav nav ul li {
+    margin-top: 3rem;
     display: inline-block;
   }
   
-  nav ul li a {
+  #nav nav ul li a {
     text-decoration: none;
     color: black;
-    padding: 10px;
-    font-size: 18px;
-    transition: all 0.3s ease-in-out;
+    padding: 20px;
+    font-size: 24px;
+    transition: color 0.5s,border-bottom 4s;
   }
-  
-  nav ul li a:hover {
-    background-color: #f2f2f2;
-    color: #5f5f5f;
+  #nav nav ul li a:hover{
+
+    color:blue;
+    border-bottom: 1px solid black;
   }
+/*name and social icons*/
+  #socials ul{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 0;
+    margin-top: -55px;
+    transform: translate(-50%, -50%);
+    display: flex;
+  }
+  #socials ul li{
+    list-style: none;
+    margin: 0 15px;
+    
+  }
+  #socials ul li .fab{
+    font-size: 30px;
+    line-height: 60px;
+    transition: .3s;
+    color: #000;
+}
+
+#socials ul li .fab:hover{
+    color: #fff;
+}
+
+#socials ul li a{
+    position: relative;
+    display: block;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #fff;
+    text-align: center;
+    transition: .6s;
+    box-shadow: 0 5px 4px rgba(0,0,0,.5);
+}
+
+#socials ul li a:hover{
+    transform: translate(0, -10%);
+}
+
+#socials ul li:nth-child(1) a:hover{
+    background-color: rgba(0, 0, 0, 0.829);
+}
+#socials ul li:nth-child(2) a:hover{
+    background-color: #40c0e4;
+}
+#socials ul li:nth-child(3) a:hover{
+    background-color: #0077b5;
+}
+#socials ul li:nth-child(4) a:hover{
+    background-color: #000;
+}
+#name{
+  margin-top: 50px;
+  font-size: 23px;
+}
+
+/*intro and profilepic*/
 #intro{
   text-align: center;
   justify-content: center;
 }
 #profilepic{
   border-radius: 50%;
-  margin-top: -25px;
+  margin-top: -75px;
 
 }
+
+/*skills*/
 
 #skills{
   text-align: center;
 }
+#techstack{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#techstack #outer-div{
+  background-color: grey;
+}
+#techstack #outer-div1 #inner-div1{
+  width: 70%;
+  height: inherit;
+  background-color:aqua;
+}
 #techstack div{
-  display: inline-block;
-    width: 150px;
-    height: 50px;
-    text-align: center;
-    background-color: grey;
-    background-size: 50% auto;
-    margin-right: 25px;
-    margin-bottom: 25px;
-    padding-top: 15px;
-    border: 2px black round;
+  background-color: aqua;
+  padding: 10px;
+  border: 2px round black;
 }
